--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -105,8 +105,9 @@ jobs:
           flags: unittests
 
       - name: Result
+        if: ${{ github.event.pull_request.base.sha }} != ''
         run: |
           go install .
-          git diff $(git merge-base origin/master --fork-point) > diff.txt
-          gocovdiff -diff diff.txtt -cov unit.coverprofile -mod $(go list -m)
+          git diff ${{ github.event.pull_request.base.sha }} > diff.txt
+          gocovdiff -diff diff.txt -cov unit.coverprofile -mod $(go list -m)
           
