--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Test
         id: test
         run: |
+          git fetch origin master ${{ github.event.pull_request.base.sha }}
           make test-unit
           go tool cover -func=./unit.coverprofile | sed -e 's/.go:[0-9]*:\t/.go\t/g' | sed -e 's/\t\t*/\t/g'  > unit.txt
           OUTPUT=$(test -e unit-base.txt && (diff unit-base.txt unit.txt || exit 0) || cat unit.txt)
@@ -91,10 +92,8 @@ jobs:
         id: annotate
         if: ${{ github.event.pull_request.base.sha }}
         run: |
-          git fetch origin master ${{ github.event.pull_request.base.sha }}
-          echo ${{ github.event.pull_request.base.sha }}
-          #git diff ${{ github.event.pull_request.base.sha }} > diff.txt
           REP=$(go run . -cov unit.coverprofile -gha-annotations gha-unit.txt)
+          echo ${REP}
           REP="${REP//$'\n'/%0A}"
           cat gha-unit.txt
           echo "::set-output name=rep::$REP"
