--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -6,20 +6,26 @@ on:
       - master
       - main
   pull_request:
+
+# Cancel the workflow in progress in newer build is about to start.
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 env:
   GO111MODULE: "on"
   RUN_BASE_COVERAGE: "on"  # Runs test for PR base in case base test coverage is missing.
-  COV_GO_VERSION: 1.17.x   # Version of Go to collect coverage
+  COV_GO_VERSION: 1.18.x   # Version of Go to collect coverage
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [ 1.16.x, 1.17.x, tip ]
+        go-version: [ 1.18.x ]
     runs-on: ubuntu-latest
     steps:
       - name: Install Go stable
         if: matrix.go-version != 'tip'
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go-version }}
       - name: Install Go tip
@@ -68,6 +74,7 @@ jobs:
       - name: Test
         id: test
         run: |
+          git fetch origin master ${{ github.event.pull_request.base.sha }}
           make test-unit
           go tool cover -func=./unit.coverprofile | sed -e 's/.go:[0-9]*:\t/.go\t/g' | sed -e 's/\t\t*/\t/g'  > unit.txt
           OUTPUT=$(test -e unit-base.txt && (diff unit-base.txt unit.txt || exit 0) || cat unit.txt)
@@ -80,6 +87,17 @@ jobs:
       - name: Store base coverage
         if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
         run: cp unit.txt unit-base.txt
+
+      - name: Annotate missing test coverage
+        id: annotate
+        if: ${{ github.event.pull_request.base.sha }}
+        run: |
+          REP=$(go run . -cov unit.coverprofile -gha-annotations gha-unit.txt)
+          echo ${REP}
+          REP="${REP//$'\n'/%0A}"
+          cat gha-unit.txt
+          echo "::set-output name=rep::$REP"
+
       - name: Comment Test Coverage
         continue-on-error: true
         if: matrix.go-version == env.COV_GO_VERSION
@@ -90,6 +108,12 @@ jobs:
           message: |
             ### Unit Test Coverage
             ${{ steps.test.outputs.total }}
+            <details><summary>Coverage of changed lines</summary>
+            
+            ${{ steps.annotate.outputs.rep }}
+
+            </details>
+            
             <details><summary>Coverage diff with base branch</summary>
 
             ```diff
@@ -103,3 +127,5 @@ jobs:
         with:
           file: ./unit.coverprofile
           flags: unittests
+
+
