--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,6 +20,13 @@ linters-settings:
 linters:
   enable-all: true
   disable:
+    - gocognit
+    - gocyclo
+    - cyclop
+    - funlen
+    - gosec
+    - testpackage
+    - goerr113
     - lll
     - maligned
     - gochecknoglobals
@@ -37,6 +44,8 @@ linters:
     - tagliatelle
     - errname
     - ireturn
+    - exhaustruct
+    - nonamedreturns
 
 issues:
   exclude-use-default: false
