--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -64,7 +64,7 @@ jobs:
           echo "::set-output name=total::$TOTAL"
       - name: Annotate missing test coverage
         id: annotate
-        if: (matrix.go-version == env.COV_GO_VERSION) && ${{ github.event.pull_request.base.sha }} != ''
+        if: matrix.go-version == env.COV_GO_VERSION && github.event.pull_request.base.sha != ''
         run: |
           REP=$(go run . -cov unit.coverprofile -gha-annotations gha-unit.txt)
           echo ${REP}
@@ -74,7 +74,7 @@ jobs:
 
       - name: Comment Test Coverage
         continue-on-error: true
-        if: (matrix.go-version == env.COV_GO_VERSION) && ${{ github.event.pull_request.base.sha }} != ''
+        if: matrix.go-version == env.COV_GO_VERSION && github.event.pull_request.base.sha != ''
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
