Use module in func diff, make main importable, update deps

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -46,6 +46,12 @@ linters:
     - ireturn
     - exhaustruct
     - nonamedreturns
+    - nosnakecase
+    - structcheck
+    - varcheck
+    - deadcode
+    - testableexamples
+    - dupword
 
 issues:
   exclude-use-default: false
@@ -57,5 +63,13 @@ issues:
         - noctx
         - funlen
         - dupl
+        - structcheck
+        - unused
+        - unparam
+        - nosnakecase
       path: "_test.go"
+    - linters:
+        - errcheck # Error checking omitted for brevity.
+        - gosec
+      path: "example_"
 
