--- a/.golangci.yml
+++ b/.golangci.yml
@@ -52,6 +52,8 @@ linters:
     - deadcode
     - testableexamples
     - dupword
+    - depguard
+    - tagalign
 
 issues:
   exclude-use-default: false
